First pass at alternative fountain code
I think this can be faster than Raptor codes